@@ -1,3 +1,12 @@
+2012-05-23  Lu Guanqun  <guanqun.lu@intel.com>
+
+        sort the array 'non_wrapper_types'
+        https://bugs.webkit.org/show_bug.cgi?id=87335
+
+        Reviewed by Kentaro Hara.
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+
 2012-05-23  Shinya Kawanaka  <shinyak@chromium.org>
 
         Document.elementFromPoint exposes inner element of Shadow DOM.
